Fixed to not use deprecated api reported by idea plugin report checker: